@@ -1,22 +1,20 @@
 Package: afex
 Type: Package
 Title: Analysis of Factorial Experiments
-Maintainer: Henrik Singmann
-    <henrik.singmann@psychologie.uni-freiburg.de>
-Author: Henrik Singmann <henrik.singmann@psychologie.uni-freiburg.de>
 Depends:
     R (>= 2.14.0),
     coin,
     car,
     lme4,
-    pbkrtest (>= 0.3-2),
-    reshape2,
-    stringr
+    pbkrtest (>= 0.3-2)
 Suggests:
     ascii,
     xtable,
     parallel
-Description: Provides convenience functions for analysing factorial
+Imports:
+    reshape2,
+    stringr
+Description: Provides convenience functions for analyzing factorial
     experiments using ANOVA or mixed-models. ez.glm() and aov.car()
     allow convenient calculation of between, within (i.e.,
     repeated-measures), or mixed between-within (i.e., split-plot)
@@ -38,8 +36,8 @@ Encoding: UTF-8
 Authors@R: c(person(given="Henrik", family="Singmann",
     email="henrik.singmann@psychologie.uni-freiburg.de",
     role=c("aut", "cre")))
-Version: 0.6-78
-Date: 2013-08-28
+Version: 0.6-80
+Date: 2013-09-24
 Collate:
     'afex-package.R'
     'aov.car.R'
